# thesis-2025-eco-script-engine

./: .gitignore  README.md
Eco.FSM1/AssemblyFiles/Linux/gcc_7_4_0/: Makefile  build.sh
Eco.FSM1/AssemblyFiles/Mac/Xcode_12_3/Eco.FSM1.xcodeproj/: project.pbxproj
Eco.FSM1/AssemblyFiles/Mac/Xcode_12_3/Eco.FSM1.xcodeproj/project.xcworkspace/xcuserdata/vbashev.xcuserdatad/: UserInterfaceState.xcuserstate
Eco.FSM1/AssemblyFiles/Mac/Xcode_12_3/Eco.FSM1.xcodeproj/xcshareddata/xcschemes/: Eco.FSM1.xcscheme
Eco.FSM1/AssemblyFiles/Mac/Xcode_12_3/Eco.FSM1.xcodeproj/xcuserdata/vbashev.xcuserdatad/xcschemes/: xcschememanagement.plist
Eco.FSM1/AssemblyFiles/Windows/CMake/: CMakeLists.txt
Eco.FSM1/AssemblyFiles/Windows/VisualStudio_10/: Eco.FSM1.sln  Eco.FSM1.vcxproj  Eco.FSM1.vcxproj.filters  Eco.FSM1UnitTest.vcxproj  Eco.FSM1UnitTest.vcxproj.filters
Eco.FSM1/DesignFiles/: Eco.FSM1 Спецификация в.1.0.docx  Eco_FA1_User_Manual_v_1_0_RU.docx
Eco.FSM1/HeaderFiles/: CEcoFL1Alphabet.h  CEcoFL1SymbolSet.h  CEcoFSM1.h  CEcoFSM1Event.h  CEcoFSM1EventProcessing.h  CEcoFSM1Factory.h  CEcoFSM1State.h  CEcoFSM1StateMachine.h  CEcoFSM1Transition.h
Eco.FSM1/SharedFiles/: IEcoFL1.h  IEcoFSM1.h  IEcoFSM1State.h  IdEcoFSM1.h
Eco.FSM1/SourceFiles/: CEcoFL1Alphabet.c  CEcoFL1SymbolSet.c  CEcoFSM1.c  CEcoFSM1Event.c  CEcoFSM1EventProcessing.c  CEcoFSM1Factory.c  CEcoFSM1State.c  CEcoFSM1StateMachine.c  CEcoFSM1Transition.c
Eco.FSM1/UnitTestFiles/SourceFiles/: EcoFSM1.c
Eco.LexicalAnalyzer1/AssemblyFiles/Windows/CMake/: CMakeLists.txt
Eco.LexicalAnalyzer1/SharedFiles/: IEcoLexicalAnalyzer1.h  IEcoLexicalAnalyzer1Scanner.h  IEcoLexicalAnalyzer1Token.h  IdEcoLexicalAnalyzer1.h
Eco.LexicalAnalyzer1/UnitTestFiles/HeaderFiles/: CEcoGlushkov1Sink.h  CEcoScanner1Sink.h  EcoC89Grammar.h
Eco.LexicalAnalyzer1/UnitTestFiles/SourceFiles/: CEcoGlushkov1Sink.c  CEcoScanner1Sink.c  EcoC89Grammar.c  EcoLexicalAnalyzer1.c  test.c
Eco.SE1.Lua/AssemblyFiles/Android/Android_NDK_15_0/Eco.SE1.Lua/: EcoSE1Lua.bat
Eco.SE1.Lua/AssemblyFiles/Android/Android_NDK_15_0/Eco.SE1.Lua/jni/: Android.mk
Eco.SE1.Lua/AssemblyFiles/Android/Android_NDK_15_0/Eco.SE1.LuaUnitTest/: AndroidManifest.xml  EcoSE1LuaUniTest.bat
Eco.SE1.Lua/AssemblyFiles/Android/Android_NDK_15_0/Eco.SE1.LuaUnitTest/jni/: Android.mk
Eco.SE1.Lua/AssemblyFiles/Android/Android_NDK_15_0/Eco.SE1.LuaUnitTest/res/values/: strings.xml
Eco.SE1.Lua/AssemblyFiles/EcoOS/aarch64_gcc_11_4_0/: Makefile
Eco.SE1.Lua/AssemblyFiles/EcoOS/arm_gcc_13_2_1/: Makefile  MakefileExe
Eco.SE1.Lua/AssemblyFiles/EcoOS/avr_gcc_12_1_0/: Makefile  upload.bat
Eco.SE1.Lua/AssemblyFiles/EcoOS/risc_v_gcc_10_1_0/: Makefile
Eco.SE1.Lua/AssemblyFiles/Linux/aarch64_gcc_11_4_0/: Makefile  MakefileExe
Eco.SE1.Lua/AssemblyFiles/Linux/risc_v_gcc_10_1_0/: Makefile  MakefileExe
Eco.SE1.Lua/AssemblyFiles/Linux/x86_64_gcc_11_4_0/: Makefile  MakefileExe  build.sh
Eco.SE1.Lua/AssemblyFiles/Mac/Xcode_12_3/Eco.SE1.Lua.xcodeproj/: project.pbxproj
Eco.SE1.Lua/AssemblyFiles/Mac/Xcode_12_3/Eco.SE1.Lua.xcodeproj/xcshareddata/xcschemes/: Dynamic.xcscheme  Static.xcscheme
Eco.SE1.Lua/AssemblyFiles/Mac/Xcode_12_3/Eco.SE1.LuaUnitTest.xcodeproj/: project.pbxproj
Eco.SE1.Lua/AssemblyFiles/Windows/CMake/: CMakeLists.txt
Eco.SE1.Lua/AssemblyFiles/Windows/VisualStudio_10/: Eco.SE1.Lua.sln  Eco.SE1.Lua.vcxproj  Eco.SE1.Lua.vcxproj.filters  Eco.SE1.LuaUnitTest.vcxproj  Eco.SE1.LuaUnitTest.vcxproj.filters
Eco.SE1.Lua/AssemblyFiles/iOS/Xcode_12_3/Eco.SE1.Lua.xcodeproj/: project.pbxproj
Eco.SE1.Lua/AssemblyFiles/iOS/Xcode_12_3/Eco.SE1.LuaUnitTest.xcodeproj/: project.pbxproj
Eco.SE1.Lua/HeaderFiles/: CEcoSE1Lua.h  CEcoSE1LuaContext.h  CEcoSE1LuaFactory.h  CEcoSE1LuaGrammar.h
Eco.SE1.Lua/SharedFiles/: ErrEcoSE1Lua.h  IEcoSE1.h  IEcoSE1Lua.hpp  IEcoSE1Lua.idl  IEcoSE1LuaContext.h  IdEcoSE1Lua.h  IdEcoSE1Lua.hpp
Eco.SE1.Lua/SourceFiles/: CEcoSE1Lua.c  CEcoSE1LuaContext.c  CEcoSE1LuaFactory.c  CEcoSE1LuaGrammar.c
Eco.SE1.Lua/UnitTestFiles/HeaderFiles/: EcoOutputDiagnostic.h
Eco.SE1.Lua/UnitTestFiles/SourceFiles/: EcoLua1Grammar.c  EcoOutputDiagnostic.c  EcoSE1Lua.c  test.lua
Eco.SEM1/AssemblyFiles/Android/Android_NDK_15_0/Eco.SEM1/: EcoSEM1.bat
Eco.SEM1/AssemblyFiles/Android/Android_NDK_15_0/Eco.SEM1/jni/: Android.mk
Eco.SEM1/AssemblyFiles/Android/Android_NDK_15_0/Eco.SEM1UnitTest/: AndroidManifest.xml  EcoSEM1UniTest.bat
Eco.SEM1/AssemblyFiles/Android/Android_NDK_15_0/Eco.SEM1UnitTest/jni/: Android.mk
Eco.SEM1/AssemblyFiles/Android/Android_NDK_15_0/Eco.SEM1UnitTest/res/values/: strings.xml
Eco.SEM1/AssemblyFiles/EcoOS/aarch64_gcc_11_4_0/: Makefile
Eco.SEM1/AssemblyFiles/EcoOS/arm_gcc_13_2_1/: Makefile  MakefileExe
Eco.SEM1/AssemblyFiles/EcoOS/avr_gcc_12_1_0/: Makefile  upload.bat
Eco.SEM1/AssemblyFiles/EcoOS/risc_v_gcc_10_1_0/: Makefile  build.sh
Eco.SEM1/AssemblyFiles/Linux/aarch64_gcc_11_4_0/: Makefile  MakefileExe
Eco.SEM1/AssemblyFiles/Linux/risc_v_gcc_10_1_0/: Makefile  MakefileExe
Eco.SEM1/AssemblyFiles/Linux/x86_64_gcc_11_4_0/: Makefile  MakefileExe
Eco.SEM1/AssemblyFiles/Mac/Xcode_12_3/Eco.SEM1.xcodeproj/: project.pbxproj
Eco.SEM1/AssemblyFiles/Mac/Xcode_12_3/Eco.SEM1.xcodeproj/xcshareddata/xcschemes/: Dynamic.xcscheme  Static.xcscheme
Eco.SEM1/AssemblyFiles/Mac/Xcode_12_3/Eco.SEM1UnitTest.xcodeproj/: project.pbxproj
Eco.SEM1/AssemblyFiles/Windows/CMake/: CMakeLists.txt
Eco.SEM1/AssemblyFiles/Windows/VisualStudio_10/: Eco.SEM1.sln  Eco.SEM1.vcxproj  Eco.SEM1.vcxproj.filters  Eco.SEM1UnitTest.vcxproj  Eco.SEM1UnitTest.vcxproj.filters
Eco.SEM1/AssemblyFiles/iOS/Xcode_12_3/Eco.SEM1.xcodeproj/: project.pbxproj
Eco.SEM1/AssemblyFiles/iOS/Xcode_12_3/Eco.SEM1UnitTest.xcodeproj/: project.pbxproj
Eco.SEM1/DesignFiles/: EcoSEM1.vsdx
Eco.SEM1/HeaderFiles/: CEcoSEM1.h  CEcoSEM1Factory.h
Eco.SEM1/SharedFiles/: ErrEcoSEM1.h  IEcoSEM1.h  IEcoSEM1.hpp  IEcoSEM1.idl  IdEcoSEM1.h  IdEcoSEM1.hpp
Eco.SEM1/SourceFiles/: CEcoSEM1.c  CEcoSEM1Factory.c
Eco.SEM1/UnitTestFiles/SourceFiles/: EcoSEM1.c
